--- a/index.html
+++ b/index.html
@@ -3,28 +3,23 @@
 
 <html lang="bg">
 <head>
-
-
-<link rel="preload" href="assets/fonts/poppins-v23-latin-regular.woff2" as="font" type="font/woff2" crossorigin importance="low">
-<link rel="preload" href="assets/fonts/poppins-v23-latin-500.woff2" as="font" type="font/woff2" crossorigin importance="low">
-<link rel="preload" href="assets/fonts/poppins-v23-latin-600.woff2" as="font" type="font/woff2" crossorigin importance="low">
-<link rel="preload" href="assets/fonts/poppins-v23-latin-700.woff2" as="font" type="font/woff2" crossorigin importance="low">
-<link rel="preload" as="image" href="assets/images/bg-greece.webp" fetchpriority="high">
+<link as="font" crossorigin="" href="assets/fonts/poppins-v23-latin-regular.woff2" importance="low" rel="preload" type="font/woff2"/>
+<link as="font" crossorigin="" href="assets/fonts/poppins-v23-latin-500.woff2" importance="low" rel="preload" type="font/woff2"/>
+<link as="font" crossorigin="" href="assets/fonts/poppins-v23-latin-600.woff2" importance="low" rel="preload" type="font/woff2"/>
+<link as="font" crossorigin="" href="assets/fonts/poppins-v23-latin-700.woff2" importance="low" rel="preload" type="font/woff2"/>
+<link as="image" fetchpriority="high" href="assets/images/bg-greece.webp" rel="preload"/>
 <!-- Favicon икони за всички устройства -->
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="icon" type="image/png" sizes="192x192" href="/web-app-manifest-192x192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="/web-app-manifest-512x512.png">
-<meta name="theme-color" content="#ffffff">
-<meta name="msapplication-TileColor" content="#003366">
-
-
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png"/>
+<link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
+<link href="/site.webmanifest" rel="manifest"/>
+<link href="/web-app-manifest-192x192.png" rel="icon" sizes="192x192" type="image/png"/>
+<link href="/web-app-manifest-512x512.png" rel="icon" sizes="512x512" type="image/png"/>
+<meta content="#ffffff" name="theme-color"/>
+<meta content="#003366" name="msapplication-TileColor"/>
+<meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>Пламен Моллов – Преводачески услуги с гръцки език в Пловдив – устни, писмени преводи, заверка и легализация на документи</title>
-
 <style>
 
 /* Оптимизация за рендериране */
@@ -274,15 +269,12 @@ button:active {
 }
 
 </style>
-<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация на документи, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/>
-  <meta property="og:title" content="Пламен Моллов – Преводи от и на гръцки език" />
-  <meta property="og:description" content="Заклет преводач с 17 г. опит, устни и писмени преводи от и на гръцки език, заверки и легализация на документи, консултации, имоти в Гърция." />
-  <meta property="og:image" content="https://www.prevodigr.eu/assets/images/logo.webp" />
-  <meta property="og:url" content="https://www.prevodigr.eu" />
-  <meta name="twitter:card" content="summary_large_image" />
-
-
-
+<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация на документи, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical">
+<meta content="Пламен Моллов – Преводи от и на гръцки език" property="og:title"/>
+<meta content="Заклет преводач с 17 г. опит, устни и писмени преводи от и на гръцки език, заверки и легализация на документи, консултации, имоти в Гърция." property="og:description"/>
+<meta content="https://www.prevodigr.eu/assets/images/logo.webp" property="og:image"/>
+<meta content="https://www.prevodigr.eu" property="og:url"/>
+<meta content="summary_large_image" name="twitter:card"/>
 <style>
 @font-face {
   font-family: 'Poppins';
@@ -313,11 +305,6 @@ button:active {
   font-display: swap;
 }
 </style>
-
-
-
-
-
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -399,11 +386,10 @@ button:active {
   ]
 }
 </script>
-
-</head>
+</link></meta></meta></head>
 <body>
 <header>
-<img alt="Plamen Mollov Logo" src="assets/images/logo.webp" fetchpriority="high"/>
+<img alt="Plamen Mollov Logo" fetchpriority="high" src="assets/images/logo.webp"/>
 <h1>Заклет преводач от и на гръцки език – Пламен Моллов</h1>
 <h2><strong>17 години опит в устни и писмени преводи, заверки, легализации и консултации</strong></h2>
 </header>
@@ -416,13 +402,13 @@ button:active {
 <div class="nav-links">
 <a href="#about">За мен / Σχετικά με εμένα</a>
 <a href="#services">Услуги / Υπηρεσίες</a>
-<a href="#prices">Цени / Τιμές</a>
+<a href="prices.html">Цени / Τιμές</a>
 <a href="#real-estate">Имоти в Гърция / Ακίνητα στην Ελλάδα</a>
-<a href="#testimonials">Мнения / Αξιολογήσεις</a>
+<a href="testimonials.html">Мнения / Αξιολογήσεις</a>
 <a href="#contact">Контакти / Επικοινωνίες</a>
 </div>
 </nav>
-<div class="hero" role="img" aria-label="Фоново изображение с гръцка тематика">
+<div aria-label="Фоново изображение с гръцка тематика" class="hero" role="img">
 <span class="hero-letter" style="top: 77%; left: 69%; animation-delay: 1.43s;">Χ</span>
 <span class="hero-letter" style="top: 9%; left: 47%; animation-delay: 2.79s;">Κ</span>
 <span class="hero-letter" style="top: 19%; left: 63%; animation-delay: 4.21s;">Υ</span>
@@ -501,46 +487,7 @@ button:active {
   📩 Επικοινωνήστε μαζί μου για προσωπικό ραντεβού ή συμβουλή.</strong></p>
 <p><strong><a href="https://www.dimokritosrealestate.gr/" rel="noopener noreferrer" target="_blank">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a></strong></p>
 </section>
-<section id="prices">
-<h2 class="section-title">Цени / Τιμές</h2>
-<p style="text-align: justify;">
-<em>Цените се договарят индивидуално според сложността, обема и сроковете.</em><br/>
-<em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em>
-</p>
-<div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
-<!-- Рекламен банер с анимация -->
-<div style="
-      background: linear-gradient(135deg, #e0f0ff, #ffffff);
-      border: 2px solid #0055a5;
-      border-radius: 12px;
-      padding: 1.5rem;
-      text-align: center;
-      margin-bottom: 2rem;
-      box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15);
-      animation: pulseBanner 4s infinite;
-    ">
-<h3 style="
-        font-size: 2rem;
-        font-family: 'Poppins', sans-serif;
-        color: #003366;
-        font-weight: 700;
-        margin-bottom: 1rem;
-      ">
-        📩 Попълни формата и вземи своята оферта още днес!<br/>
-        📋 Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!
-      </h3>
-<p style="font-size: 1.1rem; color: #222;">💬 Безплатна, бърза и напълно онлайн консултация / Δωρεάν, γρήγορη και πλήρως διαδικτυακή συμβουλευτική</p>
-</div>
-<!-- Формата -->
-<iframe height="750" id="offerForm" loading="lazy" src="https://forms.fillout.com/t/9NUe5T1CmCus" style="border:none;" title="Форма за оферта" width="100%">
-</iframe>
-<div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
-      🔒 <a href="https://prevodigr.eu/privacy.html" style="color:#003366; text-decoration: underline;" target="_blank">
-        Политика за поверителност / Πολιτική απορρήτου
-      </a>
-</div>
-</div>
-</section>
+
 <style>
 @keyframes pulseBanner {
   0% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
@@ -557,80 +504,24 @@ button:active {
   }
 }
 </style>
-<section id="testimonials">
-<h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
-<div class="testimonial">
-      “Изключително професионален подход и невероятно качество на преводите. Препоръчвам с две ръце!”
-      <strong>Мария Димитрова</strong>
-</div>
-<div class="testimonial">
-      “Благодарение на Пламен, успях да сключа важен договор в Гърция. Истински мост между културите.”
-      <strong>Дияна Иванова</strong>
-</div>
-<div class="testimonial">
-      “Είμαι πολύ ικανοποιημένος από τις υπηρεσίες του κ. Πλάμεν Μόλλοβ.”
-      <strong>Παρασκευαΐδης Χρήστος</strong>
-</div>
-<div class="testimonial">
-      “Коректни преводачески услуги, щадящи времето на клиента, на достъпни цени. С удоволствие бих ползвал отново!” 
-      <strong>Пламен Чингаров</strong>
-</div>
-<div style="margin-top: 2rem;">
-<div style="
-        background: linear-gradient(135deg, #e6f2ff, #ffffff);
-        border: 2px solid #0055a5;
-        border-radius: 12px;
-        padding: 1.5rem;
-        text-align: center;
-        margin-bottom: 2rem;
-        box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15);
-        animation: pulseReview 4s infinite;
-        ">
-<h3 style="
-    font-size: 2rem;
-    font-family: 'Poppins', sans-serif;
-    color: #990033;
-    font-weight: 700;
-    margin-bottom: 1rem;
-  ">
-    🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας
-  </h3>
-<p style="font-size: 1.1rem; color: #333;">✍️ Вашето мнение има значение – помогнете на други клиенти с вашата оценка! / Η γνώμη σας μετράει – βοηθήστε άλλους πελάτες με την αξιολόγησή σας!</p>
-</div>
-<style>
-@keyframes pulseReview {
-  0% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
-  50% { transform: scale(1.01); box-shadow: 0 10px 24px rgba(0, 85, 165, 0.25); }
-  100% { transform: scale(1); box-shadow: 0 8px 20px rgba(0, 85, 165, 0.15); }
-}
-@media (max-width: 768px) {
-  #testimonials h3 {
-    font-size: 1.4rem !important;
-    line-height: 1.4;
-  }
-}
-</style>
-<iframe height="600" id="feedbackForm" loading="lazy" src="https://forms.fillout.com/t/89sjbQ6ZJ1us" style="border:none;" title="Форма за мнение" width="100%">
-</iframe>
-<div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
-  🔒 <a href="https://prevodigr.eu/privacy.html" style="color:#003366; text-decoration: underline;" target="_blank">
-    Политика за поверителност / Πολιτική απορρήτου
-  </a>
-</div>
-</div>
-</section>
+
 <section id="contact">
 <h2 class="section-title">Контакти / Επικοινωνίες</h2>
 <p>📧 Email: <a href="mailto:mollovplamen@gmail.com">mollovplamen@gmail.com</a></p>
 <p>📧 Email: <a href="mailto:info@prevodigr.eu">info@prevodigr.eu</a></p>
 <p>📍 Град: Пловдив, България / πόλη Πλόβντιβ Βουλγαρίας</p>
 <p>📞 Телефон / Τηλέφωνο: 00359 897 09 89 59</p>
+
+<div style="margin-top: 2rem; display: flex; flex-wrap: wrap; gap: 1rem;">
+<a href="viber://chat?number=+359897098959" style="background: #665CAC; color: white; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; animation: wave 2s infinite;">💬 Чат във Viber</a>
+<a href="https://wa.me/359897098959" style="background: #25D366; color: white; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; animation: wave 2s infinite;">💬 Чат в WhatsApp</a>
+<a href="tel:+359897098959" style="background: #003366; color: white; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; animation: wave 2s infinite;">📞 Позвънете сега / Καλέστε τώρα</a>
+</div>
 </section>
 <footer>
 <p>© 2025 Пламен Моллов – Заклет преводач с гръцки език</p>
 <p>🇧🇬 България | Ελλάδα 🇬🇷</p>
 </footer>
-
 <script>
 window.addEventListener("message", function(event) {
   if (event.origin.includes("fillout.com")) {
