--- a/testimonials.html
+++ b/testimonials.html
@@ -2,6 +2,8 @@
 <html lang="bg">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Мнения / Αξιολογήσεις</title>
 <style>
 
@@ -297,6 +299,53 @@ button:active {
     font-size: 1rem !important;
   }
 }
+
+@media (max-width: 768px) {
+  body {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    padding: 0 1rem;
+  }
+
+  header h1 {
+    font-size: 1.6rem;
+  }
+
+  header h2 {
+    font-size: 1.2rem;
+  }
+
+  .section-title {
+    font-size: 1.6rem;
+    text-align: center;
+  }
+
+  nav a {
+    font-size: 1rem;
+    padding: 0.7rem 1rem;
+  }
+
+  .testimonial {
+    font-size: 1rem;
+  }
+
+  iframe {
+    height: 700px !important;
+  }
+
+  h3 {
+    font-size: 1.4rem !important;
+  }
+
+  p {
+    font-size: 1rem !important;
+  }
+
+  input, textarea, button {
+    font-size: 1rem;
+  }
+}
+
 </style>
 </head>
 <body>
@@ -352,8 +401,55 @@ button:active {
     line-height: 1.4;
   }
 }
+
+@media (max-width: 768px) {
+  body {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    padding: 0 1rem;
+  }
+
+  header h1 {
+    font-size: 1.6rem;
+  }
+
+  header h2 {
+    font-size: 1.2rem;
+  }
+
+  .section-title {
+    font-size: 1.6rem;
+    text-align: center;
+  }
+
+  nav a {
+    font-size: 1rem;
+    padding: 0.7rem 1rem;
+  }
+
+  .testimonial {
+    font-size: 1rem;
+  }
+
+  iframe {
+    height: 700px !important;
+  }
+
+  h3 {
+    font-size: 1.4rem !important;
+  }
+
+  p {
+    font-size: 1rem !important;
+  }
+
+  input, textarea, button {
+    font-size: 1rem;
+  }
+}
+
 </style>
-<iframe height="600" id="feedbackForm" loading="lazy" src="https://forms.fillout.com/t/89sjbQ6ZJ1us" style="border:none;" title="Форма за мнение" width="100%">
+<iframe height="700" id="feedbackForm" loading="lazy" src="https://forms.fillout.com/t/89sjbQ6ZJ1us" style="border:none;" title="Форма за мнение" width="100%">
 </iframe>
 <div style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
   🔒 <a href="https://prevodigr.eu/privacy.html" style="color:#003366; text-decoration: underline;" target="_blank">
