--- a/index.html
+++ b/index.html
@@ -268,6 +268,10 @@ button:active {
   100% { transform: translateY(-10px); opacity: 0; }
 }
 
+
+a:active {
+  transform: scale(0.96);
+}
 </style>
 <meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация на документи, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical">
 <meta content="Пламен Моллов – Преводи от и на гръцки език" property="og:title"/>
@@ -513,9 +517,9 @@ button:active {
 <p>📞 Телефон / Τηλέφωνο: 00359 897 09 89 59</p>
 
 <div style="margin-top: 2rem; display: flex; flex-wrap: wrap; gap: 1rem;">
-<a href="viber://chat?number=+359897098959" style="background: #665CAC; color: white; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; animation: wave 2s infinite;">💬 Чат във Viber</a>
-<a href="https://wa.me/359897098959" style="background: #25D366; color: white; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; animation: wave 2s infinite;">💬 Чат в WhatsApp</a>
-<a href="tel:+359897098959" style="background: #003366; color: white; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; animation: wave 2s infinite;">📞 Позвънете сега / Καλέστε τώρα</a>
+  <a href="viber://chat?number=+359897098959" style="background: #665CAC; color: #fff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">Viber</a>
+  <a href="https://wa.me/359897098959" style="background: #25D366; color: #fff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">WhatsApp</a>
+  <a href="tel:+359897098959" style="background: #003366; color: #fff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">Позвънете сега / Καλέστε τώρα</a>
 </div>
 </section>
 <footer>
