--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ a:active {
 
 <div style="margin-top: 2rem; display: flex; flex-wrap: wrap; gap: 1rem;">
   <a href="viber://chat?number=+359897098959" style="background: #665CAC; color: #fff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">Viber</a>
-  <a href="https://wa.me/359897098959" style="background: #128C7E; color: #fff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">WhatsApp</a>
+  <a href="https://wa.me/359897098959" style="background: #075E54; color: #ffffff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">WhatsApp</a>
   <a href="tel:+359897098959" style="background: #003366; color: #fff; padding: 1rem 1.5rem; border-radius: 12px; text-decoration: none; font-weight: bold; transition: transform 0.1s ease-in-out;">Позвънете сега / Καλέστε τώρα</a>
 </div>
 </section>
