--- a/testimonials.html
+++ b/testimonials.html
@@ -347,6 +347,70 @@ button:active {
 }
 
 </style>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Product",
+  "name": "Преводачески услуги от Пламен Моллов",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "4"
+  },
+  "review": [
+    {
+      "@type": "Review",
+      "reviewBody": "Изключително професионален подход и невероятно качество на преводите. Препоръчвам с две ръце!",
+      "author": {
+        "@type": "Person",
+        "name": "Мария Димитрова"
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5"
+      }
+    },
+    {
+      "@type": "Review",
+      "reviewBody": "Благодарение на Пламен, успях да сключа важен договор в Гърция. Истински мост между културите.",
+      "author": {
+        "@type": "Person",
+        "name": "Дияна Иванова"
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5"
+      }
+    },
+    {
+      "@type": "Review",
+      "reviewBody": "Είμαι πολύ ικανοποιημένος από τις υπηρεσίες του κ. Πλάμεν Μόλλοβ.",
+      "author": {
+        "@type": "Person",
+        "name": "Παρασκευαΐδης Χρήστος"
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5"
+      }
+    },
+    {
+      "@type": "Review",
+      "reviewBody": "Коректни преводачески услуги, щадящи времето на клиента, на достъпни цени. С удоволствие бих ползвал отново!",
+      "author": {
+        "@type": "Person",
+        "name": "Пламен Чингаров"
+      },
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5"
+      }
+    }
+  ]
+}
+</script>
+
 </head>
 <body>
 <section id="testimonials">
