--- a/testimonials.html
+++ b/testimonials.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
+
 <html lang="bg">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Мнения / Αξιολογήσεις</title>
 <style>
 
@@ -347,9 +347,7 @@ button:active {
 }
 
 </style>
-
-<script type="application/ld+json">
-{
+<script type="application/ld+json">{
   "@context": "https://schema.org",
   "@type": "Product",
   "name": "Преводачески услуги от Пламен Моллов",
@@ -369,7 +367,8 @@ button:active {
       "reviewRating": {
         "@type": "Rating",
         "ratingValue": "5"
-      }
+      },
+      "datePublished": "2025-07-20"
     },
     {
       "@type": "Review",
@@ -381,7 +380,8 @@ button:active {
       "reviewRating": {
         "@type": "Rating",
         "ratingValue": "5"
-      }
+      },
+      "datePublished": "2025-07-20"
     },
     {
       "@type": "Review",
@@ -393,7 +393,8 @@ button:active {
       "reviewRating": {
         "@type": "Rating",
         "ratingValue": "5"
-      }
+      },
+      "datePublished": "2025-07-20"
     },
     {
       "@type": "Review",
@@ -405,12 +406,17 @@ button:active {
       "reviewRating": {
         "@type": "Rating",
         "ratingValue": "5"
-      }
+      },
+      "datePublished": "2025-07-20"
     }
-  ]
-}
-</script>
-
+  ],
+  "@id": "https://www.prevodigr.eu/testimonials.html",
+  "itemReviewed": {
+    "@type": "Service",
+    "name": "Преводачески услуги от Пламен Моллов",
+    "url": "https://www.prevodigr.eu"
+  }
+}</script>
 </head>
 <body>
 <section id="testimonials">
