--- a/prices.html
+++ b/prices.html
@@ -388,6 +388,22 @@ button:active {
       </a>
 </div>
 </div>
+
+<div style="text-align: center; margin-top: 2rem;">
+  <a href="index.html" style="
+    background-color: #003366;
+    color: white;
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 600;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+  ">⬅️ Обратно към начална страница / Επιστροφή στην αρχική σελίδα</a>
+</div>
+
 </section>
 </body>
 </html>
