--- a/testimonials.html
+++ b/testimonials.html
@@ -347,10 +347,21 @@ button:active {
 }
 
 </style>
-<script type="application/ld+json">{
+<script type="application/ld+json">
+{
   "@context": "https://schema.org",
-  "@type": "Product",
+  "@type": "LocalBusiness",
   "name": "Преводачески услуги от Пламен Моллов",
+  "image": "https://www.prevodigr.eu/assets/images/logo.png",
+  "url": "https://www.prevodigr.eu",
+  "telephone": "+359897098959",
+  "priceRange": "€€",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "ул. Димитър Талев 132",
+    "addressLocality": "Пловдив",
+    "addressCountry": "BG"
+  },
   "aggregateRating": {
     "@type": "AggregateRating",
     "ratingValue": "5",
@@ -409,14 +420,9 @@ button:active {
       },
       "datePublished": "2025-07-20"
     }
-  ],
-  "@id": "https://www.prevodigr.eu/testimonials.html",
-  "itemReviewed": {
-    "@type": "Service",
-    "name": "Преводачески услуги от Пламен Моллов",
-    "url": "https://www.prevodigr.eu"
-  }
-}</script>
+  ]
+}
+</script>
 </head>
 <body>
 <section id="testimonials">
