--- a/testimonials.html
+++ b/testimonials.html
@@ -360,6 +360,7 @@ button:active {
     "@type": "PostalAddress",
     "streetAddress": "ул. Димитър Талев 132",
     "addressLocality": "Пловдив",
+      "postalCode": "4000",
     "addressCountry": "BG"
   },
   "aggregateRating": {
