--- a/thanks.html
+++ b/thanks.html
@@ -8,49 +8,39 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f4f8fb;
+      background: linear-gradient(to bottom, #e6f2ff, #ffffff);
+      color: #003366;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      margin: 0;
       text-align: center;
     }
-    .container {
-      background: white;
-      padding: 3rem;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.07);
-    }
     h1 {
-      color: #004080;
+      font-size: 2.5rem;
       margin-bottom: 1rem;
     }
     p {
-      font-size: 1.1rem;
-      color: #333;
-      margin-bottom: 2rem;
+      font-size: 1.2rem;
     }
-    a.button {
-      display: inline-block;
-      padding: 0.8rem 1.5rem;
-      background: #004080;
-      color: white;
+    a {
+      margin-top: 2rem;
       text-decoration: none;
-      font-weight: bold;
+      background: #003366;
+      color: white;
+      padding: 0.8rem 1.5rem;
       border-radius: 8px;
-      transition: background 0.3s ease;
+      font-weight: bold;
     }
-    a.button:hover {
-      background: #0066cc;
+    a:hover {
+      background: #0055a5;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Благодарим за заявката!<br>Ευχαριστούμε για το αίτημά σας!</h1>
-    <p>Ще се свържем с вас възможно най-скоро.<br>Θα επικοινωνήσουμε μαζί σας το συντομότερο δυνατόν.</p>
-    <a href="index.html" class="button">⬅ Обратно към сайта / Επιστροφή στην αρχική</a>
-  </div>
+  <h1>Благодарим ви за изпратеното съобщение!<br>Σας ευχαριστούμε για το μήνυμά σας!</h1>
+  <p>Ще се свържем с вас възможно най-скоро.<br>Θα επικοινωνήσουμε μαζί σας το συντομότερο δυνατόν.</p>
+  <a href="index.html">Обратно към началната страница / Επιστροφή στην αρχική σελίδα</a>
 </body>
 </html>
