--- a/testimonials.html
+++ b/testimonials.html
@@ -346,6 +346,13 @@ button:active {
   }
 }
 
+
+a.back-home:hover {
+  transform: scale(1.05);
+  background-color: #0055a5;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
 </style>
 <script type="application/ld+json">
 {
@@ -525,6 +532,13 @@ button:active {
   }
 }
 
+
+a.back-home:hover {
+  transform: scale(1.05);
+  background-color: #0055a5;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
 </style>
 <iframe height="700" id="feedbackForm" loading="lazy" src="https://forms.fillout.com/t/89sjbQ6ZJ1us" style="border:none;" title="Форма за мнение" width="100%">
 </iframe>
@@ -536,7 +550,7 @@ button:active {
 </div>
 
 <div style="text-align: center; margin-top: 2rem;">
-  <a href="index.html" style="
+  <a href="index.html" class="back-home" style="
     background-color: #003366;
     color: white;
     padding: 1rem 2rem;
