--- a/prices.html
+++ b/prices.html
@@ -346,6 +346,13 @@ button:active {
   }
 }
 
+
+a.back-home:hover {
+  transform: scale(1.05);
+  background-color: #0055a5;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
 </style>
 </head>
 <body>
@@ -390,7 +397,7 @@ button:active {
 </div>
 
 <div style="text-align: center; margin-top: 2rem;">
-  <a href="index.html" style="
+  <a href="index.html" class="back-home" style="
     background-color: #003366;
     color: white;
     padding: 1rem 2rem;
